--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -15,13 +15,12 @@ body {
     font-size: 14px;
     color: #fff;
     background-color: rgb(20, 18, 24);
-
-    // position: relative;
-    // overflow-x: hidden;
+    position: relative;
+    overflow-x: hidden;
 }
 body{
     margin: 0;
-    // min-width: 320px;
+    min-width: 320px;
 }
 a{
     display: inline-block;
@@ -34,7 +33,11 @@ li{
     padding: 0;
     list-style: none;
 }
-
+.container{
+    max-width: 1165px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 .wrapper {
 	display: flex;
 	flex-direction: column;
@@ -46,11 +49,7 @@ li{
 .footer {
 	flex: 0 0 auto;
 }
-.container{
-    max-width: 1165px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
+
 // .container-fluid{
 //     max-width: 100%;
 //     margin: 0 auto;
